[gd_scene load_steps=22 format=2]

[ext_resource path="res://assets/Images/WordSelection2/a.png" type="Texture" id=1]
[ext_resource path="res://assets/Images/PlanoPilotoIntro/5-congresso nacional.png" type="Texture" id=2]
[ext_resource path="res://assets/Images/WordSelection2/d.png" type="Texture" id=3]
[ext_resource path="res://assets/Images/WordSelection2/e.png" type="Texture" id=4]
[ext_resource path="res://assets/Images/WordSelection2/b.png" type="Texture" id=5]
[ext_resource path="res://assets/Images/WordSelection2/c.png" type="Texture" id=6]
[ext_resource path="res://scenes/PlanoPiloto/WordSelection2.gd" type="Script" id=7]
[ext_resource path="res://scenes/AuxScenes/PlayerBackPack.tscn" type="PackedScene" id=8]
[ext_resource path="res://assets/Themes/CharacterChoice.tres" type="Theme" id=9]
[ext_resource path="res://assets/Fonts/bebas_neue/BebasNeue-Regular.ttf" type="DynamicFontData" id=10]
[ext_resource path="res://scenes/AuxScenes/Player.tscn" type="PackedScene" id=11]
[ext_resource path="res://assets/Images/diary/cartazes.png" type="Texture" id=12]
[ext_resource path="res://scenes/AuxScenes/Button.tscn" type="PackedScene" id=13]
[ext_resource path="res://scenes/AuxScenes/AudioController.tscn" type="PackedScene" id=14]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.0823529, 0.286275, 0.396078, 1 )

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0.0823529, 0.286275, 0.396078, 1 )

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 0.0823529, 0.286275, 0.396078, 1 )

[sub_resource type="StyleBoxFlat" id=4]
bg_color = Color( 0.0823529, 0.286275, 0.396078, 1 )

[sub_resource type="StyleBoxFlat" id=5]
bg_color = Color( 0.0823529, 0.286275, 0.396078, 1 )

[sub_resource type="DynamicFont" id=7]
size = 23
font_data = ExtResource( 10 )

[sub_resource type="Animation" id=8]
resource_name = "Popmenssage"
length = 2.0
tracks/0/type = "value"
tracks/0/path = NodePath("UnlockedSkill/Skill:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 2 ),
"transitions": PoolRealArray( 0.615573, 1 ),
"update": 0,
"values": [ Vector2( 244.364, 458.182 ), Vector2( 249.455, -224 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("UnlockedSkill/Skill:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Fade_Popup/Fade:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 0.670588 ) ]
}

[node name="CanvasLayer" type="CanvasLayer"]
script = ExtResource( 7 )

[node name="Congresso" type="Sprite" parent="."]
position = Vector2( 515, 288 )
texture = ExtResource( 2 )

[node name="option1" type="Panel" parent="."]
margin_left = 174.0
margin_top = 200.0
margin_right = 437.0
margin_bottom = 249.0
custom_styles/panel = SubResource( 1 )

[node name="word1" type="Sprite" parent="option1"]
position = Vector2( 131, 25 )
texture = ExtResource( 1 )

[node name="button" type="TextureButton" parent="option1"]
margin_right = 262.0
margin_bottom = 50.0

[node name="option2" type="Panel" parent="."]
margin_left = 640.0
margin_top = 183.0
margin_right = 1020.0
margin_bottom = 234.0
custom_styles/panel = SubResource( 2 )

[node name="word2" type="Sprite" parent="option2"]
position = Vector2( 189, 25 )
texture = ExtResource( 5 )

[node name="button" type="TextureButton" parent="option2"]
margin_right = 381.0
margin_bottom = 52.0

[node name="option3" type="Panel" parent="."]
margin_left = 329.0
margin_top = 95.0
margin_right = 607.0
margin_bottom = 147.0
custom_styles/panel = SubResource( 3 )

[node name="word3" type="Sprite" parent="option3"]
position = Vector2( 139, 26 )
texture = ExtResource( 6 )

[node name="button" type="TextureButton" parent="option3"]
margin_top = -1.0
margin_right = 279.0
margin_bottom = 52.0

[node name="option4" type="Panel" parent="."]
margin_left = 51.0
margin_top = 356.0
margin_right = 359.0
margin_bottom = 443.0
custom_styles/panel = SubResource( 4 )

[node name="word4" type="Sprite" parent="option4"]
position = Vector2( 154, 44 )
texture = ExtResource( 3 )

[node name="button" type="TextureButton" parent="option4"]
margin_right = 309.0
margin_bottom = 86.0

[node name="option5" type="Panel" parent="."]
self_modulate = Color( 1, 0.992157, 0.992157, 1 )
margin_left = 599.0
margin_top = 368.0
margin_right = 937.0
margin_bottom = 414.0
custom_styles/panel = SubResource( 5 )

[node name="word5" type="Sprite" parent="option5"]
position = Vector2( 168, 23 )
texture = ExtResource( 4 )

[node name="button" type="TextureButton" parent="option5"]
margin_right = 338.0
margin_bottom = 47.0

[node name="TryButton" parent="." instance=ExtResource( 13 )]
margin_left = 834.0
margin_top = 494.0
margin_right = 904.0
margin_bottom = 538.0
text = "  Próximo"

[node name="MessageBox" type="WindowDialog" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -264.0
margin_top = -106.0
margin_right = 264.0
margin_bottom = 106.0
theme = ExtResource( 9 )

[node name="MessageText" type="Label" parent="MessageBox"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -233.5
margin_top = -80.0
margin_right = 233.5
margin_bottom = 80.0
custom_colors/font_color = Color( 0.0235294, 0.0313726, 0.109804, 1 )
custom_fonts/font = SubResource( 7 )
text = "Após esse percurso, como podemos definir esse acontecimento na Esplanada? Escolha palavras que definem o movimento:
"
align = 1
valign = 1
autowrap = true

[node name="PlayerBackPack" parent="." instance=ExtResource( 8 )]
visible = false

[node name="Player" parent="." instance=ExtResource( 11 )]

[node name="Fade_Popup" type="Popup" parent="."]
margin_left = 320.0
margin_top = 400.0
margin_right = 360.0
margin_bottom = 440.0

[node name="Fade" type="Panel" parent="Fade_Popup"]
modulate = Color( 1, 1, 1, 0 )
margin_left = -320.0
margin_top = -400.0
margin_right = 705.0
margin_bottom = 179.0

[node name="UnlockedSkill" type="WindowDialog" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -192.0
margin_top = 112.0
margin_right = 304.0
margin_bottom = 275.0
rect_scale = Vector2( 0.785714, 0.785714 )
theme = ExtResource( 9 )

[node name="Label" type="Label" parent="UnlockedSkill"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.627
anchor_bottom = 0.5
margin_left = -237.818
margin_top = -91.1818
margin_right = 185.079
margin_bottom = 91.8182
custom_colors/font_color = Color( 0.196078, 0.282353, 0.376471, 0.670588 )
text = "Parabéns! Foi desbloqueada a Habilidade problematização."
align = 1
valign = 1
autowrap = true

[node name="Skill" type="Sprite" parent="UnlockedSkill"]
modulate = Color( 1, 1, 1, 0 )
position = Vector2( 244.364, 458.182 )
scale = Vector2( 0.537851, 0.537851 )
texture = ExtResource( 12 )

[node name="UnlockedSkillAnimation" type="AnimationPlayer" parent="."]
anims/Popmenssage = SubResource( 8 )

[node name="MainMusic" parent="." instance=ExtResource( 14 )]

[connection signal="button_down" from="TryButton" to="." method="_on_TryButton_button_down"]
[connection signal="popup_hide" from="UnlockedSkill" to="." method="_on_UnlockedSkill_popup_hide"]
